# cmu_project_public

./: README.md
docs/phase2/: README.md  phase2_presentation.pptx
docs/phase2/00_bringup/: bringup.txt
docs/phase2/01_surface/: checking_point.txt  compile_warning_server_with_Wextra_and_Wall.txt  strings_client_debug.txt  strings_server.txt
docs/phase2/02_env_cipher_penetration/: README.md  loop_test.sh
docs/phase2/02_env_cipher_penetration/result/: README.md  names
docs/phase2/03_vulnerabilities/: vulnerabilities.pptx  vulnerabiltiies.txt
docs/phase2/03_vulnerabilities/V07/: login.py  protocolLogin.proto
docs/phase2/03_vulnerabilities/V12/: fuzz.pptx  fuzz_tartan.py  fuzz_verify.py  readme.txt
docs/phase2/04_static_analysis/: cppcheck_team1_jetson.csv  cppcheck_team1_pc.csv  flawfinder_team1_jetson.txt  flawfinder_team1_jetson.xlsx
phase2/docs/01_surface/: compile_warning_client.txt  nmap_jetson.txt  strings_client_release.txt
phase2/docs/02_env_cipher_penetration/: README.md  Readme.md  blob_decript.sh  cipher.sh  dbDecToJPG  decript_blob.sh  insert_blob_toDB.sh  name_decript.sh
phase2/docs/02_env_cipher_penetration/dec_img/: CMakeLists.txt
phase2/docs/02_env_cipher_penetration/tmp/: blob33.dec
phase2/docs/03_vulnerabilities/: vulnerabiltiies.txt
phase2/docs/03_vulnerabilities/V02/: tcp_packet.pcapng  vulnerable_packet.txt
phase2/docs/03_vulnerabilities/V07/: login.py  protocolLogin_pb2.py
phase2/docs/04_static_analysis/: flawfinder_team1_pc.txt
source/: README.md
source/common/libs/libcertcheck/: README.md
(+1 files in other folders)
